--- a/clientSocket/package.json
+++ b/clientSocket/package.json
@@ -42,6 +42,7 @@
     "react-type-animation": "^3.1.0",
     "replicate": "^0.9.3",
     "socket.io-client": "^4.6.2",
+    "stats-js": "^1.0.1",
     "stream-http": "^3.2.0",
     "three": "^0.155.0",
     "typescript": "^5.1.6",
